# Mitrich_laba2

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
src/: calculation.h  genNumbers.h  genVectors.h  parallelStarter.h  utils.h
src/test/: main.test.cpp
test/: CMakeLists.txt  intTest.cpp  resultTest.cpp  runTest_1.cpp  runTest_2.cpp  runTest_4.cpp  runTest_8.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
